--- a/web/src/assets/main.css
+++ b/web/src/assets/main.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: #1e1e1e;
+  background-color: var(--p-content-background);
   color: white;
   font-family: 'Inter', sans-serif;
 }
